[package]
name = "matching_programming_languages"
version = "0.1.0"
edition = "2021"
include = ["resources"]
rust-version = "1.77.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe ="*"
  
egui_extras = {version="*", features = ["default", "all_loaders", "svg", "image"] }
env_logger = { version = "0.11.3",  features = [
  "auto-color",
  "humantime",
] }
image = { version = "0.25.1", features = [
  "jpeg",
  "png",
] }
resvg = "0.41.0"
rand = "0.8.5"